--- a/src/main/resources/layouts/PieceGui.fxml
+++ b/src/main/resources/layouts/PieceGui.fxml
@@ -5,7 +5,8 @@
 <Group 
     xmlns="http://javafx.com/javafx/8" 
     xmlns:fx="http://javafx.com/fxml/1"
-    fx:controller="it.unibo.chessgravity.view.impl.PieceViewImpl" >
+    fx:controller="it.unibo.chessgravity.view.impl.PieceViewImpl"
+    onMousePressed="#onMousePressed" >
 
     <children>
         <Rectangle fx:id="piece" />
