--- a/src/main/resources/layouts/MainGui.fxml
+++ b/src/main/resources/layouts/MainGui.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 
 <Group xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" 
@@ -10,5 +11,6 @@ fx:controller="it.unibo.chessgravity.view.impl.ChessGravityViewImpl" onMousePres
 		<Group fx:id="piecesGroup" />
 		<Button fx:id="restart" text="Restart" onMousePressed="#restart" />
 		<Button fx:id="quit" text="Quit" onMousePressed="#quit" />
+		<Group fx:id="menu" />
 	</children>
 </Group>
